--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-picker/picker": "1.9.2",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
     "expo": "~40.0.0",
     "expo-checkbox": "~1.0.0",
     "expo-status-bar": "~1.0.3",
