--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.1.0",
+    "@expo/vector-icons": "^12.0.3",
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
@@ -16,18 +18,29 @@
     "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
-    "expo": "~40.0.0",
+    "@use-expo/font": "^2.0.0",
+    "expo": "^40.0.1",
+    "expo-app-loading": "^1.0.1",
+    "expo-apple-authentication": "~2.2.2",
     "expo-checkbox": "~1.0.0",
+    "expo-font": "~8.4.0",
+    "expo-google-sign-in": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
-    "react": "16.13.1",
+    "formik": "^2.2.6",
+    "react": "^17.0.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12"
+    "react-native-sfsymbols": "^1.0.0",
+    "react-native-svg": "12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-native-web": "~0.13.12",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
