--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo/vector-icons": "^12.0.3",
-    "@react-native-async-storage/async-storage": "^1.13.4",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "1.9.2",
@@ -24,6 +24,7 @@
     "expo-apple-authentication": "~2.2.2",
     "expo-checkbox": "~1.0.0",
     "expo-font": "~8.4.0",
+    "expo-google-app-auth": "^8.1.4",
     "expo-google-sign-in": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
