--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
