--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-calendars": "^1.1249.0",
     "react-native-chart-kit": "^6.11.0",
+    "react-native-dropdown-picker": "^4.0.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~1.13.0",
