--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-chart-kit": "^6.11.0",
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-modal-dropdown": "https://github.com/siemiatj/react-native-modal-dropdown",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
