--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "@expo/metro-config": "^0.1.57"
   },
   "private": true
 }
