connected recent sales to repliers.api

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "@use-expo/font": "^2.0.0",
+    "axios": "^0.21.1",
     "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-apple-authentication": "~2.2.2",
