--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.1.0",
-    "@expo/vector-icons": "^12.0.3",
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
@@ -30,7 +30,7 @@
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "formik": "^2.2.6",
-    "react": "^17.0.1",
+    "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-calendars": "^1.1249.0",
