--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-calendars": "^1.1249.0",
     "react-native-chart-kit": "^6.11.0",
     "react-native-dropdown-picker": "^4.0.2",
+    "react-native-flexbox-grid": "^0.3.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-modal-dropdown": "^1.0.0",
     "react-native-paper": "^4.7.1",
