--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "expo-app-loading": "^1.0.1",
     "expo-apple-authentication": "~2.2.2",
     "expo-checkbox": "~1.0.0",
-    "expo-facebook": "^11.0.5",
+    "expo-facebook": "~9.1.0",
     "expo-font": "~8.4.0",
     "expo-google-app-auth": "^8.1.4",
     "expo-google-sign-in": "~8.4.0",
@@ -49,7 +49,7 @@
     "react-native-svg": "12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^11.4.0",
+    "react-native-webview": "11.0.0",
     "yup": "^0.32.8"
   },
   "devDependencies": {
