--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-app-loading": "^1.0.1",
     "expo-apple-authentication": "~2.2.2",
     "expo-checkbox": "~1.0.0",
+    "expo-crypto": "^9.1.0",
     "expo-facebook": "~9.1.0",
     "expo-font": "~8.4.0",
     "expo-google-app-auth": "^8.1.4",
