--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-font": "~9.1.0",
     "expo-google-app-auth": "^8.1.4",
     "expo-google-sign-in": "~9.1.0",
+    "expo-screen-orientation": "~3.1.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "8.2.3",
     "formik": "^2.2.6",
