--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-flexbox-grid": "^0.3.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal-dropdown": "^1.0.0",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~2.1.0",
