change name of app

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "PropziDev",
-    "slug": "propzi_dev",
+    "name": "Propzi",
+    "slug": "propzi",
     "version": "1.0.5",
     "facebookScheme": "fb845016889691335",
     "facebookAppId": "845016889691335",
