removed the type of homescreen

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Propzi",
-    "slug": "propzi",
+    "slug": "propzi_dev",
     "version": "1.0.5",
     "facebookScheme": "fb845016889691335",
     "facebookAppId": "845016889691335",
