--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "@reduxjs/toolkit": "^1.6.0",
     "@use-expo/font": "^2.0.0",
     "axios": "^0.21.1",
     "d3-scale": "^3.3.0",
@@ -56,6 +57,7 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.2.3",
+    "react-redux": "^7.2.4",
     "yup": "^0.32.8"
   },
   "devDependencies": {
