--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
+    "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-native-picker/picker": "1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/drawer": "^5.12.3",
@@ -53,6 +54,7 @@
     "react-native-redash": "^16.0.11",
     "react-native-screens": "~3.0.0",
     "react-native-sfsymbols": "^1.0.0",
+    "react-native-skeleton-placeholder": "^4.0.0",
     "react-native-svg": "12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.13.12",
